# Simulation

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
src/: main.cc  main.cpp
src/Classes/: Object.cpp  Object.h
src/classes/: Object.cpp  Object.h  ObjectShapes.cpp  ObjectShapes.h  color.cc  color.h  glfw_callback.cc  glfw_callback.h  inputs.cc  inputs.h  key.cc  key.h  material.cc  material.h  math_defines.cc  math_defines.h  object.cc  object.h  object_handler.cc  object_handler.h  object_shapes.cc  object_shapes.h  objects.cc  settings.cc  settings.h
src/glad/: glad.c  glad.h
